Resumen-Recomendaciones-Bibliografia

--- a/articulo.tex
+++ b/articulo.tex
@@ -62,21 +62,25 @@
 \pretitle{\begin{center}\Huge\bfseries} 
 \posttitle{\end{center}} 
 \title{Patrones de Diseño} 
-\author{Percy Taquila Carazas}
+\author{Percy Taquila Carazas, Katerin Merino Quispe}
 \date{\today} 
 \renewcommand{\maketitlehookd}{
 
 \selectlanguage{english}
 \begin{abstract}
 \noindent 
-Aca va el asbtract(ingles)
+Design patterns provide a coded mechanism for describing problems and their solution in a way that allows the software engineering community to design knowledge for reuse.
+A pattern describes a problem, indicates the context and allows the user to understand the environment in which the problem occurs, and lists a system of forces that indicate how the problem can be interpreted in context, and the way in which the problem is applied. solution.
+The Abstract Factory pattern is usually implemented with manufacturing methods that are also generally called from within the Template Method.
 \end{abstract}
 
 
 \selectlanguage{spanish}
 \begin{abstract}
 \noindent 
-Aca va el resumen
+Los patrones de diseño dan un mecanismo codificado para describir problemas y su solución en forma tal que permiten que la comunidad de ingeniería de software diseñe el conocimiento para que sea reutilizado.
+Un patrón describe un problema, indica el contexto y permite que el usuario entienda el ambiente en el que sucede el problema, y enlista un sistema de fuerzas que indican cómo puede interpretarse el problema en su contexto, y el modo en el que se aplica la solución.
+El patron Abstract Factory suele implementarse con metodos de fabricacion que tambien generalmente son llamados desde el interior de Template Method.
 \end{abstract}
 
 }
@@ -122,8 +126,7 @@ A diferencia del aprendizaje supervisado, en el no supervisado solo se le otorga
 
 \section{Conclusiones}
 
-El Aprendizaje Automatizado (Machine Learning; ML) es una rama de la inteligencia artificial, en gran parte inspirada en el razonamiento humano, que comprende el aprendizaje a partir de experiencia (Sammut y Webb 2011)(Sammut y Webb 2011). El aprendizaje automático aborda, a su vez, una serie de problemáticas que tributan a problemas específicos, entre ellos: los problemas de clasificación, asociación, agrupamiento, y selección de rasgos (Sammut y Webb 2011)(Cong, Pérez y Morell 2015; Sammut y Webb 2011).
-Mediante el aprendizaje automático, el reconocimiento de patrones, va aprendiendo y mejora conforme a la experiencia que va adquiriendo. Para lograr su aprendizaje lo hace mediante dos formas: uno es el aprendizaje supervisado, o también llamado clasificación, y el otro es el aprendizaje no supervisado o agrupamiento.
+Los patrones de diseño dan un
 
 %----------------------------------------------------------------------------------------
 %	Recomendaciones
@@ -133,8 +136,9 @@ Mediante el aprendizaje automático, el reconocimiento de patrones, va aprendien
 
 
 \begin{itemize}
-\item Aprendizaje Supervisado
-En el Aprendizaje Supervisado los datos para el entrenamiento incluyen la solución deseada, llamada «etiquetas» (labels). Un claro ejemplo es al clasificar correo entrante entre Spam o no. Entre las diversas características que queremos entrenar deberemos incluir si es correo basura o no con un 1 o un 0. Otro ejemplo son al predecir valores numéricos por ejemplo precio de vivienda a partir de sus características (metros cuadrados, nº de habitaciones, incluye calefacción, distancia del centro, etc.) y deberemos incluir el precio que averiguamos en nuestro set de datos.
+\item Cuando se conoce el efecto colateral que conlleva el patrón de diseño y es viable la aparición de este efecto.
+\item Suministrar alternativas de diseño para poder tener un software flexible y reutilizable.
+
 
 \includegraphics[width=7cm]{Imagenes/imagen1}
 
@@ -150,9 +154,7 @@ En el Aprendizaje Supervisado los datos para el entrenamiento incluyen la soluci
 \begin{thebibliography}{99} 
 
 \bibitem[1]{}
-\newblock Javier Lozado Silva, 2018. Aprendizaje Supervisado Eficiente
-Para el analisis de datos 
- 
+\newblock Gamma, Erich; Helm, Richard; Johnson, Ralph; Vlissides, John(1995).Design Patterns: Elements of Reusable Object- Oriented Software. Reading,Massachusetts: Addison Wesley Longman, Inc.
 
 
 
