--- a/articulo.tex
+++ b/articulo.tex
@@ -68,7 +68,7 @@
 \posttitle{\end{center}} 
 \title{Patrones de Diseño} 
 \author{Percy Taquila Carazas, Katerin Merino Quispe, Abraham Lipa Calabilla,
-\\Edwart Balcon Coahila}
+\\Edwart Balcon Coahila, Lisbeth Espinoza Caso}
 \date{\today} 
 \renewcommand{\maketitlehookd}{
 
@@ -104,13 +104,17 @@ El patron Abstract Factory suele implementarse con metodos de fabricacion que ta
 
 \section{Introduccion}
 
-\lettrine[nindent=0em,lines=3]{E}l aprendizaje es esencial para la mayoría de las arquitecturas de redes neuronales, por lo que la elección de un algoritmo de aprendizaje es un punto central en el desarrollo de una red, este implica que una unidad de procesamiento es capaz de cambiar su comportamiento entrada/salida
-como resultado de los cambios en el medio.\\
+\lettrine[nindent=0em,lines=3]{L}os patrones de diseño son muy interesantes para los programadores, ya que nos ofrecen soluciones a problemas comunes y cuotidianos a la hora de diseñar una aplicación. Existen infinidad de casos en que el problema sigue el mismo patrón, solo cambia el contexto; un patrón de diseño te propone una solución a este tipo de problemas..\\
 
-El camino hacia la construccion de maquinas inteligentes comienza en la Segunda Guerra Mundial con el diseÑo de computadoras analogicas ideadas para controlar cañones antiaereos o para la navegacion.
-Algunos investigadores observaron que existıan semejanzas entre el funcionamiento de estos dispositivos de control y los sistemas reguladores de los seres vivos. De este modo, combinando los avances de la electronica de la posguerra y los conocimientos sobre los sistemas nerviosos de los seres vivos, inicio el reto de construir maquinas capaces de responder y aprender como los animales.
+La manera de utilizarlos depende de dos factores: comprender correctamente cuando se pueden usar y tenerlos presentes a la hora de diseñar. Lo primero se consigue habiéndolos estudiado y puesto en práctica en diferentes contextos. Lo segundo, que también incluye su dificultad, es la capacidad de encontrarse con un problema, y ser capaz de relacionarlo con un patrón de diseño que conozcas.
 
+Las características de un patrón son tres:
 
+\begin{itemize}
+\item Contexto: situación en la que se presenta el problema de diseño.
+\item Problema: descripción del problema a resolver, y enumeración de las fuerzas a equilibrar (requisitos no funcionales como eficiencia, portabilidad, cambiabilidad, …).
+\item Solución: conjunto de medidas que se han de tomar, como crear alguna clase, atributo o método, nuevos comportamientos entre clases, …
+\end{itemize}
 
 
 %----------------------------------------------------------------------------------------
@@ -399,7 +403,7 @@ public class Aplicacion {
 
 \section{Conclusiones}
 
-Los patrones de diseño dan un
+La conclusión es sencilla, si no usas patrones, deberías hacerlo. Los patrones ayudan a estandarizar el código, haciendo que el diseño sea más comprensible para otros programadores. Son muy buenas herramientas, y como programadores, siempre deberíamos usar las mejores herramientas a nuestro alcance
 
 %----------------------------------------------------------------------------------------
 %	Recomendaciones
